test/negative/603_tuple_index_oor.fx
// expect: range
val t = (1, 2)
println(t.5)
